--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 h1{font-size: 3rem;    
     font-family: 'Times New Roman', Times, serif;
     color: #192c1f;}
-h2{
-    font-size: 2rem;
+h2{font-size: 2rem;
     color: #36553F}
 p{
     font-size: 0.875rem;
+    font-family: 'Courier New', Courier, monospace;
     color: #292626}
+
 
 .column {
     float: left;
@@ -25,6 +26,16 @@ eachother when the screen becomes smaller than 600px (so mobile)*/
         width:100%;
     }
 }
+
+body {
+			background-image: url("knitting_background_compact.png");
+			background-repeat: no-repeat;
+			background-position: center;
+			margin-right: 200px;
+			background-attachment: fixed;
+		}
+
+
 
 /* Extra small devices {phones, 600px and down} */
 @media only screen and (max-width: 600px) { 
