--- a/style.css
+++ b/style.css
@@ -25,15 +25,16 @@ body{
     padding: 20px;
     column-gap: 10px;
     justify-content: space-around;
-    flex-flow: row wrap;
+flex-wrap: wrap;
     align-content: space-evenly;
     align-items: flex-start;
 }
 
-.main div {
-    width: 50vw;
-    flex-grow: 1;
+    /*flex-flow: row wrap;*/
 
+.main div {
+    width: 45vw;
+    flex-grow: 1;
 }
 
 @media screen and (max-width: 600px) {
@@ -77,6 +78,9 @@ body{
     height: 400px;
     width: 100%;
     background-color:#EFB387;
+    border: 10px dotted #496752;
+    border-radius: 45px;
+    overflow: scroll;
 }
 
 .rectangle {
@@ -96,6 +100,7 @@ body{
 .column {
     float: left;
     width: 50%;
+    margin: 10px 10px;
 }
 
 .row:after {
@@ -105,7 +110,7 @@ body{
 }
 @media screen and (max-width: 600px) {
     .column {
-        width:100vw;
+        width:100%;
     }
 }
 
@@ -132,20 +137,22 @@ a:hover{
 
 /*TYPOGRAPHY*/
 
-h1{font-size: 3rem;    
+h1{font-size: 5rem;    
     font-family: 'Times New Roman', Times, serif;
     color: #192c1f;
     margin-left: 30px;}
 h2{font-size: 2rem;
     color: #36553F;
     margin-left: 50px;}
-p{font-size: 0.875rem;
+p{font-size: 1rem;
     font-family: 'Courier New', Courier, monospace;
     color: #292626}
 
 
-img {max-width: 100%;
-height: auto;}
+img {max-width: 95%;
+    height: auto;
+    float: left;
+	margin: 30px 15px;}
 
 /*below is from https://www.w3schools.com/css/css_background_attachment.asp (w3schools)
 body {
@@ -193,32 +200,91 @@ nav-ul li a.active {
     nav-ul {flex-direction: column}
 }
 
+/*below is for dropdown nav*/
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
 
+.dropdown .dropbtn {
+    border: none;
+    outline: none;
+    color: #EFB387;
+    background-color: inherit;
+    padding: 14px 16px;
+    margin: 0;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #EFB387;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: #292626;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #EEE4DA;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.breadcrumb {
+    padding: 0 0.5rem;
+}
+
+.breadcrumb ol {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    align-items: end;
+}
+
+.breadcrumb li:not(:last-child)::after{
+    display: inline-block;
+    margin: 0 0.25rem;
+    content: "→";
+}
 
 /*RESPONSIVENESS*/
 
 /* Extra small devices {phones, 600px and down} */
 @media only screen and (max-width: 600px) { 
-   h1 {font-size: 2rem;}
+   h1 {font-size: 3rem;}
    h2 {font-size: 1.5rem;}
+   img {margin: 15px 10px;}
 }
 /*small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-    h1 {font-size: 2rem;}
+    h1 {font-size: 3rem;}
     h2 {font-size: 1.5rem;}
 }
 /* Medium devices {landscape tablets, 768px and up} */
 @media only screen and (min-width: 768px) { 
-    h1 {font-size: 3rem;}
+    h1 {font-size: 5rem;}
     h2 {font-size: 2rem;}
 }
 /* Large devices {laptops/desktops, 992px and up} */
 @media only screen and (min-width:992px) {
-    h1 {font-size: 3rem;}
+    h1 {font-size:5rem;}
     h2 {font-size: 2rem;}
 }
 /* Extra large devices {large laptops and desktops, 1200px and up} */
 @media only screen and (min-width: 1200px) {
-    h1 {font-size: 3rem;}
+    h1 {font-size: 5rem;}
     h2 {font-size: 2rem;}
 }
